adicionando a documentação das rotas da solicitação
